@@ -1,43 +1,39 @@
-package Acme::MetaSyntactic::Themes::Abigail;
+package Acme::MetaSyntactic::willy_wonka;
 
-use 5.006;
 use strict;
 use warnings;
 no  warnings 'syntax';
 
-our $VERSION = '2012060103';
+use Acme::MetaSyntactic::List;
+our @ISA = qw [Acme::MetaSyntactic::List];
 
+our $VERSION = '2012060103';
+__PACKAGE__ -> init;
 
 1;
 
-__END__
-
 =head1 NAME
 
-Acme::MetaSyntactic::Themes::Abigail - Abstract
+Acme::MetaSyntactic::willy_wonka - Charlie and the Chocolate Factory
 
 =head1 DESCRIPTION
 
-This package installs a few more themes for C<< Acme::MetaSyntactic >>.
+This C<< Acme::MetaSyntactic >> theme lists the main characters
+from the 1964 book, I<< Charlie and the Chocolate Factory >>, written
+by I<< Roald Dahl >>.
 
-Currently, the following themes are supplied: C<< beatles >>, C<< bee_gees >>,
-C<< charlies_angels >>, C<< cluedo >>, C<< compass >>, C<< evangelist >>, 
-C<< famous_five >>, C<< jelly_belly >>, C<< michelin >>, C<< nehi >>,
-C<< noughts_and_crosses >>, C<< shou_dou_qi >>, C<< sodor >>, and
-C<< willy_wonka >>.
-
-=head1 TODO
-
-More themes.
+This module is part of the set of C<< Acme::MetaSyntactic >> themes
+found in the C<< Acme::MetaSyntactic::Themes::Abigail >> package.
 
 =head1 SEE ALSO
 
-L<< Acme::MetaSyntactic >>
+L<Acme::MetaSyntactic>, L<< Acme::MetaSyntactic::List >>,
+L<< http://www.roalddahl.com/ >>.
 
-=head1 DEVELOPMENT
+=head1 NOTES
 
-The current sources of this module are found on github,
-L<< git://github.com/Abigail/Acme-MetaSyntactic-Themes-Abigail.git >>.
+If you are only familiar with the movies, the name Arthur Slugworth may 
+not say you much; but he plays a more prominent role in the book.
 
 =head1 AUTHOR
 
@@ -65,14 +61,10 @@ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT
 OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 
-=head1 INSTALLATION
-
-To install this module, run, after unpacking the tar-ball, the 
-following commands:
-
-   perl Makefile.PL
-   make
-   make test
-   make install
 
 =cut
+
+__DATA__
+# names
+Charlie_Bucket Willy_Wonka Grandpa_Joe Veruca_Salt Mike_Teavee
+Violet_Beauregarde Augustus_Gloop Arthur_Slugworth
